--- a/WebContent/support/index.html
+++ b/WebContent/support/index.html
@@ -34,10 +34,10 @@
 			</div>
 			<div id="detail">
 				<div id="description" class="detail-item" style="position: absolute; top: 0px; left: 0px; display: block; z-index: 2; opacity: 1; width: 545px; height: 114px;">
-					The first and only app to bring all of the rumors and <br/>
-					urban legends from Snopes to your iOS device.  Search, <br/>
-					browse by category, check out the top 25, or tap the <br/>
-					random button for hours of entertaining urban legends.
+					The first and only app for easily browsing all of the rumors <br/>
+					and urban legends from Snopes on your iOS device. <br/>
+					Search, browse by category, check out the top 25, or tap <br/>
+					the random button for hours of entertaining urban legends.
 				</div>
 			</div>
 			<div id ="footer">
@@ -51,7 +51,7 @@
 					<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FDebunked-Urban-Legends-Revealed%2F155576697820588&amp;layout=button_count&amp;show_faces=true&amp;width=120&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
 				</div>
 				<div id="legal">
-					Copyright © 2010 Rob Ruana. All rights reserved.<br/>
+					Copyright © 2011 Debunked App, LLC. All rights reserved.<br/>
 					Snopes is a registered service mark of snopes.com.
 				</div>
 			</div>
