Updating to indicate debunked was taken down

--- a/WebContent/support/index.html
+++ b/WebContent/support/index.html
@@ -14,23 +14,16 @@
 				<h1>Questions, comments, growing concerns?</h1>
 				Send me an email at <a href="mailto:rob@debunkedapp.com">rob@debunkedapp.com</a>.
 				<p class="spacer"></p>
-				<h1>Found a Bug?</h1>
-				If you'd like to file a bug report, just send an email to <a href="mailto:support@debunkedapp.com">support@debunkedapp.com</a> with "Bug" in the subject line.  Be sure to include:
-				<ul>
-					<li>A description of what happened</li>
-					<li>What device were you using (iPhone, iPhone 3G, iPhone 4, iPad, iPod Touch, etc..)</li>
-					<li>What you clicked or tapped when it happened</li>
-					<li>The type of network connection you were using (WiFi, 3G, Edge, or none)</li>
-				</ul>
+				<h1>Known Bug!</h1>
+				There is a known bug in which many of the screens appear blank.
 				<br/>
-				We can't wait to hear from you!
+				There are currently no plans to fix this bug.
+				<br/>
 			</div>
 			<div id="badge">
-				<a href="http://itunes.apple.com/app/debunked-urban-legends-revealed/id391281852">
-					<img src="/images/app-store-badge.png" 
-						alt="Available on the App Store" 
-						title="Available on the App Store"/>
-				</a>
+				<img src="/images/app-store-badge-removed.png" 
+					alt="Available on the App Store" 
+					title="Available on the App Store"/>
 			</div>
 			<div id="detail">
 				<div id="description" class="detail-item" style="position: absolute; top: 0px; left: 0px; display: block; z-index: 2; opacity: 1; width: 545px; height: 114px;">
@@ -43,12 +36,6 @@
 			<div id ="footer">
 				<div id="home">
 					<a href="/">Home</a>
-				</div>
-				<div id="facebook">
-					<a href="http://www.facebook.com/pages/Debunked-Urban-Legends-Revealed/155576697820588">Facebook</a>
-				</div>
-				<div id="facebook-like">
-					<iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FDebunked-Urban-Legends-Revealed%2F155576697820588&amp;layout=button_count&amp;show_faces=true&amp;width=120&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
 				</div>
 				<div id="legal">
 					Copyright © 2011 Debunked App, LLC. All rights reserved.<br/>
