Updating to indicate project has been open sourced on github

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,29 +1,32 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="description" content="Debunked is the first and only app to bring all the rumors and urban legends from Snopes to your iOS device.">
 		<meta name="keywords" content="snopes,snopes.com,rumor,rumors,urban legend,myth,myths,hoax,hoaxes,debunk,fact,fiction,gossip">
 		<title>Debunked: Urban Legends Revealed</title>
-		
-		<link type="text/css" href="/css/main.css" rel="stylesheet">
-		
+
+		<link type="text/css" href="css/main.css" rel="stylesheet">
 	</head>
 	<body>
 		<div id="main">
-			<div id="pager"></div>
-			<div id="iphone">
-				<div id="iphone-screens">
-					<img class="iphone-screen" src="/images/iphone-removed.png"/>
+			<a href="https://github.com/RelentlessIdiot/Debunked" title="Debunked on GitHub">
+				<div id="iphone">
+					<div id="iphone-screens">
+						<div class="iphone-screen">
+							<img src="images/iphone-github.png"/>
+							<div class="announcement">Download the source<br>on GitHub!</div>
+						</div>
+					</div>
 				</div>
-			</div>
+			</a>
 			<div id="badge">
-				<img src="/images/app-store-badge-removed.png" 
-					alt="No longer available on the App Store" 
+				<img src="images/app-store-badge-removed.png"
+					alt="No longer available on the App Store"
 					title="No longer available on the App Store"/>
 			</div>
 			<div id="detail">
-				<div id="description" class="detail-item" style="position: absolute; top: 0px; left: 0px; display: block; z-index: 2; opacity: 1; width: 545px; height: 114px;">
+				<div id="description" class="detail-item">
 					The first and only app for easily browsing all of the rumors <br/>
 					and urban legends from Snopes on your iOS device. <br/>
 					Search, browse by category, check out the top 25, or tap <br/>
@@ -31,11 +34,11 @@
 				</div>
 			</div>
 			<div id ="footer">
-				<div id="support">
-					<a href="/support">Support</a>
+				<div id="github">
+					<a href="https://github.com/RelentlessIdiot/Debunked" title="Debunked on GitHub">Debunked on GitHub</a>
 				</div>
 				<div id="legal">
-					Copyright © 2011 Debunked App, LLC. All rights reserved.<br/>
+					Copyright © 2009-2013 Rob Ruana.<br/>
 					Snopes is a registered service mark of snopes.com.
 				</div>
 			</div>
