--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,47 +1,143 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="description" content="Debunked is the first and only app to bring all the rumors and urban legends from Snopes to your iOS device.">
-		<meta name="keywords" content="snopes,snopes.com,rumor,rumors,urban legend,myth,myths,hoax,hoaxes,debunk,fact,fiction,gossip">
-		<title>Debunked: Urban Legends Revealed</title>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Debunked is the first and only app to bring all the rumors and urban legends from Snopes to your iOS device.">
+    <meta name="keywords" content="snopes,snopes.com,rumor,rumors,urban legend,myth,myths,hoax,hoaxes,debunk,fact,fiction,gossip">
+    <title>Debunked: Urban Legends Revealed</title>
 
-		<link type="text/css" href="css/main.css" rel="stylesheet">
-	</head>
-	<body>
-		<div id="main">
-			<a href="https://github.com/RelentlessIdiot/Debunked" title="Debunked on GitHub">
-				<div id="iphone">
-					<div id="iphone-screens">
-						<div class="iphone-screen">
-							<img src="images/iphone-github.png"/>
-							<div class="announcement">Download the source<br>on GitHub!</div>
-						</div>
-					</div>
-				</div>
-			</a>
-			<div id="badge">
-				<img src="images/app-store-badge-removed.png"
-					alt="No longer available on the App Store"
-					title="No longer available on the App Store"/>
-			</div>
-			<div id="detail">
-				<div id="description" class="detail-item">
-					The first and only app for easily browsing all of the rumors <br/>
-					and urban legends from Snopes on your iOS device. <br/>
-					Search, browse by category, check out the top 25, or tap <br/>
-					the random button for hours of entertaining urban legends.
-				</div>
-			</div>
-			<div id ="footer">
-				<div id="github">
-					<a href="https://github.com/RelentlessIdiot/Debunked" title="Debunked on GitHub">Debunked on GitHub</a>
-				</div>
-				<div id="legal">
-					Copyright © 2009-2013 Rob Ruana.<br/>
-					Snopes is a registered service mark of snopes.com.
-				</div>
-			</div>
-		</div>
-	</body>
+    <link rel="stylesheet" type="text/css" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="fonts.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery.cycle2.min.js"></script>
+    <script type="text/javascript" src="js/jquery.cycle2.swipe.min.js"></script>
+    <script type="text/javascript">
+var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
+if (isIOS) {
+    document.write('<script type="text/javascript" src="js/iosfix.js"><\/script>');
+}
+    </script>
+</head>
+<!--[if IE ]>
+  <![if lt IE 10]>
+    <body class="ie">
+  <![endif]>
+  <![if gte IE 10]>
+    <body>
+  <![endif]>
+<![endif]-->
+<!--[if !IE]>-->
+  <body>
+<!--<![endif]-->
+    <div id="main">
+        <div id="question-mark-shadow"><span>?</span></div>
+        <div id="question-mark"><span>?</span></div>
+        <div id="title-shadow">
+            <h1>Debunked</h1>
+            <h2>Urban Legends Revealed</h2>
+        </div>
+        <div id="title">
+            <h1>Debunked</h1>
+            <h2>Urban Legends Revealed</h2>
+        </div>
+        <div id="iphone" class="background-image">
+            <div id="screens"
+                 class="cycle-slideshow"
+                 data-cycle-pause-on-hover="true"
+                 data-cycle-fx=scrollHorz
+                 data-cycle-swipe=true
+                 data-cycle-pager="#pager"
+                 data-cycle-slides="> div.screen">
+<!--[if IE ]>
+  <![if lt IE 10]>
+                <div id="screen01" class="screen background-image">
+                    <img src="images/iphone01.png"/>
+                    <div class="caption">Hundreds of categories!</div>
+                </div>
+                <div id="screen02" class="screen background-image">
+                    <img src="images/iphone02.png"/>
+                    <div class="caption">Check out the top 25<br>and latest rumors!</div>
+                </div>
+                <div id="screen03" class="screen background-image">
+                    <img src="images/iphone03.png"/>
+                    <div class="caption">Search for your favorite<br>topics and celebrities!</div>
+                </div>
+                <div id="screen04" class="screen background-image">
+                    <img src="images/iphone04.png"/>
+                    <div class="caption">Crazy photos!</div>
+                </div>
+                <div id="screen05" class="screen background-image">
+                    <img src="images/iphone05.png"/>
+                    <div class="caption">Random rumors!</div>
+                </div>
+  <![endif]>
+  <![if gte IE 10]>
+                <div id="screen01" class="screen background-image">
+                    <div class="caption">Hundreds of categories!</div>
+                </div>
+                <div id="screen02" class="screen background-image">
+                    <div class="caption">Check out the top 25<br>and latest rumors!</div>
+                </div>
+                <div id="screen03" class="screen background-image">
+                    <div class="caption">Search for your favorite<br>topics and celebrities!</div>
+                </div>
+                <div id="screen04" class="screen background-image">
+                    <div class="caption">Crazy photos!</div>
+                </div>
+                <div id="screen05" class="screen background-image">
+                    <div class="caption">Random rumors!</div>
+                </div>
+  <![endif]>
+<![endif]-->
+<!--[if !IE]>-->
+                <div id="screen01" class="screen background-image">
+                    <div class="caption">Hundreds of categories!</div>
+                </div>
+                <div id="screen02" class="screen background-image">
+                    <div class="caption">Check out the top 25<br>and latest rumors!</div>
+                </div>
+                <div id="screen03" class="screen background-image">
+                    <div class="caption">Search for your favorite<br>topics and celebrities!</div>
+                </div>
+                <div id="screen04" class="screen background-image">
+                    <div class="caption">Crazy photos!</div>
+                </div>
+                <div id="screen05" class="screen background-image">
+                    <div class="caption">Random rumors!</div>
+                </div>
+<!--<![endif]-->
+            </div>
+        </div>
+        <div id="pager-container">
+            <div id="pager" class="cycle-pager"></div>
+        </div>
+    </div>
+    <div id="stripe">
+        <div id="detail">
+            <div id="description" class="detail-item">
+                The first and only app for easily browsing all of the rumors <br/>
+                and urban legends from Snopes on your iOS device. <br/>
+                Search, browse by category, check out the top 25, or tap <br/>
+                the random button for hours of entertaining urban legends.
+            </div>
+            <a href="https://github.com/RelentlessIdiot/Debunked">
+                <div id="badge" class="background-image"></div>
+            </a>
+            <div class="clear"></div>
+        </div>
+    </div>
+    <div id ="footer">
+        <div id="download">
+            Download the source on <a href="https://github.com/RelentlessIdiot/Debunked">GitHub!</a>
+        </div>
+        <div id="legal">
+            Copyright © 2014 Rob Ruana. All rights reserved.<br/>
+            Snopes is a registered service mark of snopes.com.
+        </div>
+        <div class="clear"></div>
+    </div>
+</body>
 </html>
