Trying to render correctly in IE 10/11 via netrenderer.com

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -50,7 +50,7 @@ if (isIOS) {
                  data-cycle-fx=scrollHorz
                  data-cycle-swipe=true
                  data-cycle-pager="#pager"
-                 data-cycle-slides="> div.screen">
+                 data-cycle-slides="&gt; div.screen">
 <!--[if IE ]>
   <![if lt IE 10]>
                 <div id="screen01" class="screen background-image">
