Change github links from RelentlessIdiot to RobRuana

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -121,7 +121,7 @@ if (isIOS) {
                 Search, browse by category, check out the top 25, or tap <br/>
                 the random button for hours of entertaining urban legends.
             </div>
-            <a href="https://github.com/RelentlessIdiot/Debunked">
+            <a href="https://github.com/RobRuana/Debunked">
                 <div id="badge" class="background-image"></div>
             </a>
             <div class="clear"></div>
@@ -129,7 +129,7 @@ if (isIOS) {
     </div>
     <div id ="footer">
         <div id="download">
-            Download the source on <a href="https://github.com/RelentlessIdiot/Debunked">GitHub!</a>
+            Download the source on <a href="https://github.com/RobRuana/Debunked">GitHub!</a>
         </div>
         <div id="legal">
             Copyright © 2014 Rob Ruana. All rights reserved.<br/>
