Add google verification meta tag

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="description" content="Debunked is the first and only app to bring all the rumors and urban legends from Snopes to your iOS device.">
-    <meta name="keywords" content="snopes,snopes.com,rumor,rumors,urban legend,myth,myths,hoax,hoaxes,debunk,fact,fiction,gossip">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="description" content="Debunked is the first and only app to bring all the rumors and urban legends from Snopes to your iOS device." />
+    <meta name="keywords" content="snopes,snopes.com,rumor,rumors,urban legend,myth,myths,hoax,hoaxes,debunk,fact,fiction,gossip" />
+    <meta name="google-site-verification" content="DsCsnuLpoSCVWLSaUN-TDyjJ0rs7Gb5xfju1F5_npC4" />
     <title>Debunked: Urban Legends Revealed</title>
 
     <link rel="stylesheet" type="text/css" href="reset.css" />
