--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,19 +10,32 @@
 
     <title>Debunked: Urban Legends Revealed</title>
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 
-    <link rel="stylesheet" type="text/css" href="reset.css" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" type="text/css" href="owl-carousel/owl.carousel.css">
-    <link rel="stylesheet" type="text/css" href="owl-carousel/owl.theme.css">
+    <style type="text/css">
+{% include css/reset.css %}
+    </style>
+    <style type="text/css">
+{% capture style_css %}{% include css/style.scss %}{% endcapture %}
+{{ style_css | scssify }}
+    </style>
+    <style type="text/css">
+{% include owl-carousel/owl.carousel.css %}
+    </style>
+    <style type="text/css">
+{% include owl-carousel/owl.theme.css %}
+    </style>
 
-    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="owl-carousel/owl.carousel.min.js"></script>
+    <script type="text/javascript">
+{% include js/jquery-1.11.0.min.js %}
+    </script>
+    <script type="text/javascript">
+{% include owl-carousel/owl.carousel.min.js %}
+    </script>
     <script type="text/javascript">
 var isIOS = /iPhone|iPad|iPod/i.test(navigator.userAgent);
 if (isIOS) {
-    document.write('<script type="text/javascript" src="js/iosfix.js"><\/script>');
+    {% include js/iosfix.js %}
 }
 $(document).ready(function() {
     $("#screens").owlCarousel({
