Add link to robruana.com

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ $(document).ready(function() {
     </div>
     <div id ="footer">
         <div id="download">
-            Download the source on <a href="https://github.com/RobRuana/Debunked">GitHub!</a>
+            Download the source on <a id="github-link" href="https://github.com/RobRuana/Debunked">GitHub!</a>
         </div>
         <div id="legal">
-            Copyright © 2014 Rob Ruana. All rights reserved.<br/>
+            Copyright © 2015 <a id="robruana-link" href="http://robruana.com">Rob Ruana</a>. All rights reserved.<br/>
             Snopes is a registered service mark of snopes.com.
         </div>
         <div class="clear"></div>
