Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ $(document).ready(function() {
     });
 });
     </script>
+
+{% include google_analytics.html %}
+
 </head>
 <!--[if IE ]>
   <![if lt IE 10]>
