Add lang="en" to html tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 ---
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="description" content="Debunked is the first and only app to bring all the rumors and urban legends from Snopes to your iOS device." />
@@ -120,8 +120,8 @@
                 Search, browse by category, check out the top 25, or tap
                 the random button for hours of entertaining urban legends.
             </div>
-            <a id="badge-link" href="https://github.com/RobRuana/Debunked">
-                <div id="badge" title="Download the source on GitHub" class="background-image"></div>
+            <a id="badge-link" title="Download the source on GitHub" href="https://github.com/RobRuana/Debunked">
+                <div id="badge" class="background-image"></div>
             </a>
             <div class="clear"></div>
         </div>
