Add accessibility text to appstore badge link

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             </div>
             <a id="badge-link" title="Download the source on GitHub" href="https://github.com/RobRuana/Debunked">
                 <div id="badge" class="background-image"></div>
+                <span class="accessibility-text">Home</span>
             </a>
             <div class="clear"></div>
         </div>
