Change App Store badge to GitHub badge

--- a/index.html
+++ b/index.html
@@ -122,15 +122,12 @@
             </div>
             <a id="badge-link" title="Download the source on GitHub" href="https://github.com/RobRuana/Debunked">
                 <div id="badge" class="background-image"></div>
-                <span class="accessibility-text">Home</span>
+                <span class="accessibility-text">Download the source on GitHub</span>
             </a>
             <div class="clear"></div>
         </div>
     </div>
     <div id ="footer">
-        <div id="download">
-            Download the source on <a id="github-link" href="https://github.com/RobRuana/Debunked">GitHub!</a>
-        </div>
         <div id="legal">
             Copyright © 2015 <a id="robruana-link" href="http://robruana.com">Rob Ruana</a>. All rights reserved.<br/>
             Snopes is a registered service mark of snopes.com.
