Uses page specific favicons

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
     <title>Debunked: Urban Legends Revealed</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#d5af00">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Debunked/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/Debunked/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/Debunked/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/Debunked/manifest.json">
+    <link rel="mask-icon" href="/Debunked/safari-pinned-tab.svg" color="#d5af00">
+    <link rel="icon" type="image/x-icon" href="/Debunked/favicon.ico">
     <meta name="msapplication-TileColor" content="#d5af00">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="msapplication-TileImage" content="/Debunked/mstile-144x144.png">
     <meta name="theme-color" content="#d5af00">
 
     <style type="text/css">
