Fixes browserconfig.xml and manifest.json for page specific favicons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/x-icon" href="/Debunked/favicon.ico">
     <meta name="msapplication-TileColor" content="#d5af00">
     <meta name="msapplication-TileImage" content="/Debunked/mstile-144x144.png">
+    <meta name="msapplication-square150x150logo" content="/Debunked/mstile-150x150.png" />
     <meta name="theme-color" content="#d5af00">
 
     <style type="text/css">
