--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="icon" type="image/png" href="/Debunked/favicon-16x16.png" sizes="16x16">
     <link rel="manifest" href="/Debunked/manifest.json">
     <link rel="mask-icon" href="/Debunked/safari-pinned-tab.svg" color="#d5af00">
-    <link rel="icon" type="image/x-icon" href="/Debunked/favicon.ico">
-    <meta name="msapplication-config" content="/Debunked/browserconfig.xml">
-    <meta name="msapplication-TileColor" content="#d5af00">
-    <meta name="msapplication-TileImage" content="/Debunked/mstile-144x144.png">
+    <link rel="shortcut icon" href="/Debunked/favicon.ico">
     <meta name="apple-mobile-web-app-title" content="Debunked">
     <meta name="application-name" content="Debunked">
+    <meta name="msapplication-TileColor" content="#d5af00">
+    <meta name="msapplication-TileImage" content="/Debunked/mstile-144x144.png">
+    <meta name="msapplication-config" content="/Debunked/browserconfig.xml">
     <meta name="theme-color" content="#d5af00">
 
     <style type="text/css">
