Updates copyright date

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </div>
     <div id ="footer">
         <div id="legal">
-            Copyright © 2015 <a id="robruana-link" href="http://robruana.com">Rob Ruana</a>. All rights reserved.<br/>
+            Copyright © {{ site.time | date: '%Y' }} <a id="robruana-link" href="http://robruana.com">Rob Ruana</a>. All rights reserved.<br/>
             Snopes is a registered service mark of snopes.com.
         </div>
         <div class="clear"></div>
